# artemis_mission_simulator

./: .gitignore  CONTRIBUTING.md  LICENSE  READING_LIST.md  README.md  plan.md
src/generate_lunar_sdf/: README.md  package.xml  setup.cfg  setup.py
src/generate_lunar_sdf/config/: artemis_sites.yaml
src/generate_lunar_sdf/generate_lunar_sdf/: __init__.py  generate_lunar_sdf.py
src/generate_lunar_sdf/generate_lunar_sdf/map_generators/: __init__.py  heightmap_generator.py  normal_map_generator.py
src/generate_lunar_sdf/generate_lunar_sdf/utils/: __init__.py  file_downloader.py  site_catalog.py  site_config_parser.py
src/generate_lunar_sdf/hooks/: generate_lunar_sdf.dsv  generate_lunar_sdf.sh
src/generate_lunar_sdf/models/connecting_ridge/: metadata.yaml
src/generate_lunar_sdf/models/de_gerlache_rim/: metadata.yaml  model.config
src/generate_lunar_sdf/models/peak_near_shackleton/: metadata.yaml  model.sdf
src/generate_lunar_sdf/test/: __init__.py  test_cli.py  test_downloader.py  test_heightmap.py  test_integration.py  test_site_catalog.py  test_site_config.py  test_slope_texture.py  test_terrain_processing.py
src/lunar_base_models/: CMakeLists.txt  README.md  package.xml
src/lunar_base_models/hooks/environment/: lunar_base_models.dsv.in
src/lunar_base_models/models/astronaut/: model.config  model.sdf
src/lunar_base_models/models/comm_antenna/: model.config  model.sdf
src/lunar_base_models/models/equipment_crate/: model.config  model.sdf
src/lunar_base_models/models/habitat_module/: model.config  model.sdf
src/lunar_base_models/models/landing_pad/: model.config  model.sdf
src/lunar_base_models/models/light_tower/: model.config  model.sdf
src/lunar_base_models/models/lunar_flag/: model.config  model.sdf
src/lunar_base_models/scripts/: download_nasa_models.sh
src/lunar_terrain_exporter/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/lunar_terrain_exporter/config/: artemis_sites.yaml
src/lunar_terrain_exporter/hooks/: lunar_terrain_exporter.dsv  lunar_terrain_exporter.dsv.in  lunar_terrain_exporter.sh
src/lunar_terrain_exporter/lunar_terrain_exporter/: __init__.py  cli.py  lunar_terrain_exporter.py
src/lunar_terrain_exporter/scripts/: lunar_terrain_exporter
src/lunar_terrain_exporter/test/: __init__.py  test_cli.py  test_downloader.py  test_heightmap.py  test_integration.py  test_site_catalog.py  test_site_config.py  test_slope_texture.py  test_terrain_processing.py
(+96 files in other folders)
